fix place toggle collapse

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -8934,7 +8934,7 @@ padding-top: 15px;}
   width: 6px;
   height: 6px;
   background-color: rgba(21, 108, 228, 0.39);}
-.collapsed .collapsed-arrow {
+.collapsed .collapsed-arrow, .collapsed.collapsed-arrow  {
   transform: scaleY(-1);}
 .collapsed-arrow {
   transform: scaleY(1);
